melhorias de layout

--- a/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
+++ b/src/app/pages/private/dashboard/dashboard-main/dashboard-main.component.html
@@ -5,9 +5,9 @@
         <li class="nav-item">
           <span class="nav-link" (click)="grupoExibicao = 'locacoes'" [class.active]="grupoExibicao == 'locacoes'">Locações</span>
         </li>
-        <li class="nav-item">
-          <span class="nav-link" (click)="grupoExibicao = 'produtos'" [class.active]="grupoExibicao == 'produtos'">Produtos</span>
-        </li>
+<!--        <li class="nav-item">-->
+<!--          <span class="nav-link" (click)="grupoExibicao = 'produtos'" [class.active]="grupoExibicao == 'produtos'">Produtos</span>-->
+<!--        </li>-->
       </ul>
     </div>
     <hr>
