--- a/src/app/pages/public/site-home/site-home.component.scss
+++ b/src/app/pages/public/site-home/site-home.component.scss
@@ -34,6 +34,10 @@
   .navbar-brand {
     color: white !important;
   }
+
+  ul.navbar-nav li a {
+    color: whitesmoke;
+  }
 }
 
 #page-home #section-2,
