--- a/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
+++ b/src/app/pages/private/locacao/locacao-insert-edit/locacao-insert-edit.component.html
@@ -139,7 +139,7 @@
       <span
         class="badge status ms-auto"
         [class.text-bg-secondary]="entity?.status == 'ABERTA'"
-        [class.text-bg-success]="entity?.status == 'FINALIZADA'"
+        [class.text-bg-success]="entity?.status == 'FINALIZADO'"
         [class.text-bg-warning]="entity?.status == 'EM_LOCACAO'"
       >{{entity?.status}}</span>
     </div>
