--- a/src/app/pages/private/locacao/sub-components/modal-servico-locacao/modal-servico-locacao.component.html
+++ b/src/app/pages/private/locacao/sub-components/modal-servico-locacao/modal-servico-locacao.component.html
@@ -7,7 +7,8 @@
           <dg-autocomplete
             classes="form-control"
             formControlName="servico"
-            label="nome"
+            label="label"
+            key="id"
             typeFilter="outside"
             (searchFilterValue)="findServicos($event)"
             (close)="setValorBase($event)"
