--- a/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
+++ b/src/app/pages/private/lancamentos/sub-components/modal-lancamento/modal-lancamento.component.html
@@ -46,11 +46,11 @@
       <div *ngIf="form.value.baixado" class="row mb-3">
         <div class="col-4">
           <label class="form-label">Data de pagamento</label>
-          <input type="date" class="form-control" formControlName="">
+          <input type="date" class="form-control" formControlName="data_pagamento">
         </div>
         <div class="col-4">
           <label class="form-label">Forma de pagamento</label>
-          <select class="form-select" formControlName="formaPagamento">
+          <select class="form-select" formControlName="forma_pgto">
             <option value="DINHEIRO">Dinheiro</option>
           </select>
         </div>
